# resultEvaluator

./: CMakeLists.txt  dataset-Format.txt
examples/: CMakeLists.txt
examples/evaluations/: CMakeLists.txt  main.cpp
include/: resultEvaluator.h
src/: resultEvaluator.cpp
