cmake_minimum_required (VERSION 2.6)

PROJECT (resultEvaluator)

INCLUDE_DIRECTORIES (
${PROJECT_SOURCE_DIR}/src/
${PROJECT_SOURCE_DIR}/include/
)

FIND_PACKAGE(Boost COMPONENTS system filesystem REQUIRED)

set(NEEDED_LIBS
${Boost_FILESYSTEM_LIBRARY}
${Boost_SYSTEM_LIBRARY}
)

file(GLOB SOURCE_FILES ${PROJECT_SOURCE_DIR}/src/*.cpp)

file(GLOB HEADER_FILES ${PROJECT_SOURCE_DIR}/include/*.h)

SET(SOURCE_FILES ${SOURCE_FILES})
SET(HEADER_FILES ${HEADER_FILES})

ADD_LIBRARY(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${NEEDED_LIBS})

ADD_SUBDIRECTORY(examples)



